@@ -1,3 +1,9 @@
+Wed Nov 02 13:30:13 UTC 2011  Marijke Hengstmengel  <mhengstmengel@remedy.nl>
+
+        * TAO_IDL/be/be_visitor_component/servant_svs.cpp:
+        Put narrow in var, use ACE_NEW  with CIAO_FACET
+
+        
 Wed Nov 02 08:30:13 UTC 2011  Martin Corino  <mcorino@remedy.nl>
 
         Merged changes from Remedy work branch.
